--- a/Manual/ProgressiveLightmapper.html
+++ b/Manual/ProgressiveLightmapper.html
@@ -224,11 +224,11 @@
 <tr>
 	<td style="text-align:left;" colspan="2"></td>
 	<td style="text-align:left;"><strong>Direct Filter</strong></td>
-	<td style="text-align:left;" colspan="3">Select a filter to use for direct light in the lightmap.</td>
+	<td style="text-align:right;" colspan="3">Select a filter to use for direct light in the lightmap.</td>
 </tr>
 <tr>
 	<td style="text-align:left;" colspan="3"></td>
-	<td style="text-align:left;"><strong>Gaussian</strong></td>
+	<td style="text-align:right;"><strong>Gaussian</strong></td>
 	<td style="text-align:left;" colspan="2">Select this to use a Gaussian filter for direct light in the lightmap.</td>
 </tr>
 <tr>
@@ -238,7 +238,7 @@
 </tr>
 <tr>
 	<td style="text-align:left;" colspan="3"></td>
-	<td style="text-align:left;"><strong>A-Trous</strong></td>
+	<td style="text-align:right;"><strong>A-Trous</strong></td>
 	<td style="text-align:left;" colspan="2">Select this to use an A-Trous filter for direct light in the lightmap.</td>
 </tr>
 <tr>
@@ -248,17 +248,17 @@
 </tr>
 <tr>
 	<td style="text-align:left;" colspan="3"></td>
-	<td style="text-align:left;"><strong>None</strong></td>
+	<td style="text-align:right;"><strong>None</strong></td>
 	<td style="text-align:left;" colspan="2">Select this to use no filter for direct light in the lightmap.</td>
 </tr>
 <tr>
 	<td style="text-align:left;" colspan="2"></td>
 	<td style="text-align:left;"><strong>Indirect Filter</strong></td>
-	<td style="text-align:left;" colspan="3">Select a filter to use for indirect light in the lightmap.</td>
+	<td style="text-align:right;" colspan="3">Select a filter to use for indirect light in the lightmap.</td>
 </tr>
 <tr>
 	<td style="text-align:left;" colspan="3"></td>
-	<td style="text-align:left;"><strong>Gaussian</strong></td>
+	<td style="text-align:right;"><strong>Gaussian</strong></td>
 	<td style="text-align:left;" colspan="2">Select this to use a Gaussian filter for indirect light in the lightmap.</td>
 </tr>
 <tr>
@@ -268,7 +268,7 @@
 </tr>
 <tr>
 	<td style="text-align:left;" colspan="3"></td>
-	<td style="text-align:left;"><strong>A-Trous</strong></td>
+	<td style="text-align:right;"><strong>A-Trous</strong></td>
 	<td style="text-align:left;" colspan="2">Select this to use an A-Trous filter for indirect light in the lightmap.</td>
 </tr>
 <tr>
@@ -279,11 +279,11 @@
 <tr>
 	<td style="text-align:left;" colspan="2"></td>
 	<td style="text-align:left;"><strong>Ambient Occlusion Filter</strong></td>
-	<td style="text-align:left;" colspan="3">Select a filter to use for Ambient Occlusion (see below) in the lightmap. Filter only available when you enable <strong>Ambient Occlusion</strong>.</td>
+	<td style="text-align:right;" colspan="3">Select a filter to use for Ambient Occlusion (see below) in the lightmap. Filter only available when you enable <strong>Ambient Occlusion</strong>.</td>
 </tr>
 <tr>
 	<td style="text-align:left;" colspan="3"></td>
-	<td style="text-align:left;"><strong>Gaussian</strong></td>
+	<td style="text-align:right;"><strong>Gaussian</strong></td>
 	<td style="text-align:left;" colspan="2">Select this to use a Gaussian filter for Ambient Occlusion in the lightmap.</td>
 </tr>
 <tr>
@@ -293,7 +293,7 @@
 </tr>
 <tr>
 	<td style="text-align:left;" colspan="3"></td>
-	<td style="text-align:left;"><strong>A-Trous</strong></td>
+	<td style="text-align:right;"><strong>A-Trous</strong></td>
 	<td style="text-align:left;" colspan="2">Select this to use an A-Trous filter for Ambient Occlusion in the lightmap.</td>
 </tr>
 <tr>
