--- a/Manual/class-ParticleRenderer.html
+++ b/Manual/class-ParticleRenderer.html
@@ -237,7 +237,7 @@
 |</strong>Velocity Scale__</td>
 	<td style="text-align:left;">如果 <strong>Stretch Particles</strong> 设置为 <strong>Stretched__，则此值根据粒子的移动速度确定粒子拉伸的速率。 |
 |</strong>UV Animation__</td>
-	<td style="text-align:left;">如果定义了 X 和/或 Y，则会生成粒子的 UV 坐标以用于区块动画纹理。请参阅下面的<a href="#animatedtextures">动画纹理</a>。</td>
+	<th style="text-align:left;">如果定义了 X 和/或 Y，则会生成粒子的 UV 坐标以用于区块动画纹理。请参阅下面的<a href="#animatedtextures">动画纹理</a>。</th>
 </tr>
 <tr>
 	<td style="text-align:left;">&amp;#160;&amp;#160;&amp;#160;&amp;#160;&amp;#160;&amp;#160;&amp;#160;&amp;#160;<strong>X Tile</strong>
