--- a/Manual/ProgressiveLightmapper.html
+++ b/Manual/ProgressiveLightmapper.html
@@ -229,27 +229,27 @@
 <tr>
 	<td style="text-align:left;" colspan="3"></td>
 	<td style="text-align:left;"><strong>Gaussian</strong></td>
-	<td style="text-align:left;" colspan="2">Select this to use a Gaussian filter for direct light in the lightmap.</td>
+	<td style="text-align:right;" colspan="2">Select this to use a Gaussian filter for direct light in the lightmap.</td>
 </tr>
 <tr>
 	<td style="text-align:left;" colspan="4"></td>
-	<td style="text-align:left;"><strong>Direct Radius</strong></td>
+	<td style="text-align:right;"><strong>Direct Radius</strong></td>
 	<td style="text-align:left;">The radius of the Gaussian filter in texels for direct light in the lightmap. A higher radius increases the blur strength.</td>
 </tr>
 <tr>
 	<td style="text-align:left;" colspan="3"></td>
 	<td style="text-align:left;"><strong>A-Trous</strong></td>
-	<td style="text-align:left;" colspan="2">Select this to use an A-Trous filter for direct light in the lightmap.</td>
+	<td style="text-align:right;" colspan="2">Select this to use an A-Trous filter for direct light in the lightmap.</td>
 </tr>
 <tr>
 	<td style="text-align:left;" colspan="4"></td>
-	<td style="text-align:left;"><strong>Direct Sigma</strong></td>
+	<td style="text-align:right;"><strong>Direct Sigma</strong></td>
 	<td style="text-align:left;">The sigma of the A-Trous filter in texels for direct light in the lightmap. A higher sigma increases the blur strength.</td>
 </tr>
 <tr>
 	<td style="text-align:left;" colspan="3"></td>
 	<td style="text-align:left;"><strong>None</strong></td>
-	<td style="text-align:left;" colspan="2">Select this to use no filter for direct light in the lightmap.</td>
+	<td style="text-align:right;" colspan="2">Select this to use no filter for direct light in the lightmap.</td>
 </tr>
 <tr>
 	<td style="text-align:left;" colspan="2"></td>
@@ -259,21 +259,21 @@
 <tr>
 	<td style="text-align:left;" colspan="3"></td>
 	<td style="text-align:left;"><strong>Gaussian</strong></td>
-	<td style="text-align:left;" colspan="2">Select this to use a Gaussian filter for indirect light in the lightmap.</td>
+	<td style="text-align:right;" colspan="2">Select this to use a Gaussian filter for indirect light in the lightmap.</td>
 </tr>
 <tr>
 	<td style="text-align:left;" colspan="4"></td>
-	<td style="text-align:left;"><strong>Indirect Radius</strong></td>
+	<td style="text-align:right;"><strong>Indirect Radius</strong></td>
 	<td style="text-align:left;">The radius of the Gaussian filter in texels for indirect light in the lightmap. A higher radius increases the blur strength.</td>
 </tr>
 <tr>
 	<td style="text-align:left;" colspan="3"></td>
 	<td style="text-align:left;"><strong>A-Trous</strong></td>
-	<td style="text-align:left;" colspan="2">Select this to use an A-Trous filter for indirect light in the lightmap.</td>
+	<td style="text-align:right;" colspan="2">Select this to use an A-Trous filter for indirect light in the lightmap.</td>
 </tr>
 <tr>
 	<td style="text-align:left;" colspan="4"></td>
-	<td style="text-align:left;"><strong>Indirect Sigma</strong></td>
+	<td style="text-align:right;"><strong>Indirect Sigma</strong></td>
 	<td style="text-align:left;">The sigma of the A-Trous filter in texels for indirect light in the lightmap. A higher sigma increases the blur strength.</td>
 </tr>
 <tr>
@@ -284,21 +284,21 @@
 <tr>
 	<td style="text-align:left;" colspan="3"></td>
 	<td style="text-align:left;"><strong>Gaussian</strong></td>
-	<td style="text-align:left;" colspan="2">Select this to use a Gaussian filter for Ambient Occlusion in the lightmap.</td>
+	<td style="text-align:right;" colspan="2">Select this to use a Gaussian filter for Ambient Occlusion in the lightmap.</td>
 </tr>
 <tr>
 	<td style="text-align:left;" colspan="4"></td>
-	<td style="text-align:left;"><strong>Ambient Occlusion Radius</strong></td>
+	<td style="text-align:right;"><strong>Ambient Occlusion Radius</strong></td>
 	<td style="text-align:left;" colspan="3">The radius of the Gaussian filter in texels for Ambient Occlusion in the lightmap. A higher radius increases the blur strength.</td>
 </tr>
 <tr>
 	<td style="text-align:left;" colspan="3"></td>
 	<td style="text-align:left;"><strong>A-Trous</strong></td>
-	<td style="text-align:left;" colspan="2">Select this to use an A-Trous filter for Ambient Occlusion in the lightmap.</td>
+	<td style="text-align:right;" colspan="2">Select this to use an A-Trous filter for Ambient Occlusion in the lightmap.</td>
 </tr>
 <tr>
 	<td style="text-align:left;" colspan="4"></td>
-	<td style="text-align:left;"><strong>Ambient Occlusion Sigma</strong></td>
+	<td style="text-align:right;"><strong>Ambient Occlusion Sigma</strong></td>
 	<td style="text-align:left;">The sigma of the A-Trous filter in texels for Ambient Occlusion in the lightmap. A higher sigma increases the blur strength.</td>
 </tr>
 <tr>
